--- a/cartoMBGL.html
+++ b/cartoMBGL.html
@@ -27,7 +27,7 @@
     <script>
 
       //initialize MapboxGL map
-      mapboxgl.accessToken = 'pk.eyJ1IjoiY3dob25nbnljIiwiYSI6ImNpczF1MXdrdjA4MXcycXA4ZGtyN2x5YXIifQ.3HGyME8tBs6BnljzUVIt4Q';
+      mapboxgl.accessToken = 'pk.eyJ1Ijoic3RhdWFqIiwiYSI6ImNpZWltdGw2ZTAwbDZzcm0zYnR0MDg4NTEifQ.tGWe2ieN2K04CfGKjsOR4Q';
 
       var map = new mapboxgl.Map({
           container: 'map',
