--- a/arcgisMBGL.html
+++ b/arcgisMBGL.html
@@ -19,18 +19,18 @@ mapboxgl.accessToken = 'pk.eyJ1Ijoic3RhdWFqIiwiYSI6ImNpZWltdGw2ZTAwbDZzcm0zYnR0M
 var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/dark-v9',
-    center: [-63.575312, 44.648881],
-    zoom: 10
+    center: [-82.927033, 40.185561],
+    zoom: 5
 });
 
 map.on('load', function () {
 
     map.addLayer({
  "id": "Greenways",
-        "type": "line",
+        "type": "Polygon",
         "source": {
             "type": "geojson",
-            "data": "https://services2.arcgis.com/11XBiaBYA9Ep0yNJ/ArcGIS/rest/services/Trails/FeatureServer/0/query?where=1%3D1&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&resultType=none&distance=0.0&units=esriSRUnit_Meter&returnGeodetic=false&outFields=&returnGeometry=true&multipatchOption=xyFootprint&maxAllowableOffset=&geometryPrecision=&outSR=4326&returnIdsOnly=false&returnCountOnly=false&returnExtentOnly=false&returnDistinctValues=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&resultOffset=&resultRecordCount=&returnZ=false&returnM=false&quantizationParameters=&sqlFormat=none&f=pgeojson&token="
+            "data": "http://services1.arcgis.com/OwiQO3QpAXsZqKvZ/arcgis/rest/services/Enriched_DelcoGIS/FeatureServer/0/query?where=1%3D1&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&resultType=none&distance=0.0&units=esriSRUnit_Meter&returnGeodetic=false&outFields=&returnHiddenFields=false&returnGeometry=true&returnCentroid=false&multipatchOption=xyFootprint&maxAllowableOffset=&geometryPrecision=&outSR=&returnIdsOnly=false&returnCountOnly=false&returnExtentOnly=false&returnDistinctValues=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&resultOffset=&resultRecordCount=&returnZ=false&returnM=false&quantizationParameters=&sqlFormat=none&f=pgeojson"
               },
 
         "layout": {
