--- a/arcgisMBGL.html
+++ b/arcgisMBGL.html
@@ -26,22 +26,17 @@ var map = new mapboxgl.Map({
 map.on('load', function () {
 
     map.addLayer({
- "id": "Greenways",
+ "id": "Parcels",
         "type": "Polygon",
         "source": {
             "type": "geojson",
             "data": "http://services1.arcgis.com/OwiQO3QpAXsZqKvZ/arcgis/rest/services/Enriched_DelcoGIS/FeatureServer/0/query?where=1%3D1&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&resultType=none&distance=0.0&units=esriSRUnit_Meter&returnGeodetic=false&outFields=&returnHiddenFields=false&returnGeometry=true&returnCentroid=false&multipatchOption=xyFootprint&maxAllowableOffset=&geometryPrecision=&outSR=&returnIdsOnly=false&returnCountOnly=false&returnExtentOnly=false&returnDistinctValues=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&resultOffset=&resultRecordCount=&returnZ=false&returnM=false&quantizationParameters=&sqlFormat=none&f=pgeojson"
               },
 
-        "layout": {
-            "line-join": "round",
-            "line-cap": "round"
-        },
+        "layout": {},
         "paint": {
-
-            "line-color": "#228B22",
-            "line-width": 4,
-            "line-opacity": 0.3
+          'fill-color': '#088',
+          'fill-opacity': 0.8
         }
 
     });
