--- a/arcgisMBGL.html
+++ b/arcgisMBGL.html
@@ -35,8 +35,11 @@ map.on('load', function () {
 
         "layout": {},
         "paint": {
-          'fill-color': '#088',
-          'fill-opacity': 0.8
+           "fill-color": "#088",
+           "fill-opacity": 0.8,
+           "line-color": "#888",
+           "line-width": 8
+
         }
 
     });
