--- a/arcgisMBGL.html
+++ b/arcgisMBGL.html
@@ -15,7 +15,7 @@
 
 <div id='map'></div>
 <script>
-mapboxgl.accessToken = 'pk.eyJ1Ijoic3RhdWFqIiwiYSI6ImNpZWltdGw2ZTAwbDZzcm0zYnR0MDg4NTEifQ.tGWe2ieN2K04CfGKjsOR4Q';
+mapboxgl.accessToken = 'pk.eyJ1Ijoic3RhdWFqIiwiYSI6ImNqZ2U1cGtidzRkNHYzM2xvanEzOW9obXgifQ.VHoniURTcGUlXJxtb7s1iQ';
 var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/outdoors-v9',
