--- a/geolocation.html
+++ b/geolocation.html
@@ -16,7 +16,7 @@
             var longitude = position.coords.longitude;
             var altitude = position.coords.altitude;
             var accuracy = position.coords.accuracy;
-            var floor = position.coords.floor;
+            var floor = position.coords.altitudeAccuracy;
 
             alert("Latitude: " + latitude + "\nLongitude: " + longitude + "\nAltitude: " + altitude + " meters\nFloor: " + floor + "\nAccuracy: " + accuracy + " meters");
         }
